# container-gpu-scheduler

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: bench_core.py
docs/: architecture.md
examples/: quickstart.py
src/container_gpu_scheduler/: __init__.py  cli.py  core.py  exceptions.py  models.py  utils.py
tests/: conftest.py  test_core.py  test_models.py
